prevent clicking on invisible state

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+	pointer-events: none;
 }
 
 :fullscreen .scrollToExt-container,
@@ -25,6 +26,7 @@
 	opacity: var(--current-opacity, 0.5);
 	transition: opacity 0.3s;
 	font-size: 18px;
+	pointer-events: auto;
 }
 
 .scrollToExt-button:hover {
